@@ -5,6 +5,7 @@ title = Geotrek
 # URL prefix, leave empty if dedicated server.
 # Starts with / if subpath (example: /geotrek)
 rooturl =
+host = *
 
 #
 #  Advanced settings
@@ -20,12 +21,12 @@ cachetimeout = 28800
 # Configure remote authentication (see README file for details)
 
 # Table or view to query
-authent_tablename = 
+authent_tablename =
 # Connection
-authent_dbname = 
-authent_dbuser = 
-authent_dbpassword = 
-authent_dbhost = 
+authent_dbname =
+authent_dbuser =
+authent_dbpassword =
+authent_dbhost =
 authent_dbport = 5432
 authent_engine = postgresql_psycopg2
 
