@@ -7,9 +7,6 @@
 
 [settings]
 
-# Comma separated IP (and domains) of this server
-host = 11.22.33.44, localhost, .myserver.com, .myserver.com.
-
 # Default structure for newly created users
 defaultstructure = PNX
 
